3.1.0
 - feat: new contact point estimation method "fit_constant_polynomial"
   which applies a piece-wise constant and polynomial fit
 - feat: contact point estimation methods now return detailed
   information about the procedure (currently plottable data to
   understand the process)
 - fix: spatial smoothing not working in some cases (#15)
 - ref: remove "...smoothed" column data (which was never used anyway);
   instead, apply smoothing directly to AFMData subclass
 - setup: bump afmformats from 0.16.0 to 0.16.3
3.0.0
 - BREAKING CHANGE: The contact point estimation method "scheme_2020"
   has been removed, although it has been the default for some time.
   It turns out that it does not perform so well and there are other
   more stable methods (to be implemented). Furthermore, some of the
   contact point estimation methods were improved so that basically
   many tests had to be updated. This will not break your analysis,
   it just means your contact points will change.
 - feat: implement options for preprocessing methods
 - feat: the "correct_tip_offset" preprocessing method now
   accepts the "method" argument (see new poc submodule)
 - fix: contact point estimation with gradient-based method
   "poc_gradient_zero_crossing" did not really work
 - enh: improve contact point estimation with "fit_constant_line"
 - enh: speed-up contact point estimation with "deviation_from_baseline"
 - ref: CLI profiles now use JSON format by default
   (old format still supported)
 - ref: move contact point estimation to new 'poc' submodule
2.0.1
 - enh: implement 'require_steps' in preprocessing to make sure
   that steps are executed in the correct order
 - enh: add several helper functions for preprocessing
2.0.0
 - BREAKING CHANGE: segment in FitProperties is now an integer
 - setup: bump afmformats from 0.15.0 to 0.16.0
 - docs: update doc strings for the "sneddon_spher_approx" model
 - docs: remove duplcate docs for model functions
1.7.8